Added Factory Method. Transfered PARABOLA.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,17 @@
 cmake_minimum_required(VERSION 2.8) # Проверка версии CMake.
 									# Если версия установленой программы
-									# старее указаной, произайдёт аварийный выход.
+									# старее указаной, произойдёт аварийный выход.
 project(winapi_gdi)
 ADD_DEFINITIONS(-DUNICODE)
 ADD_DEFINITIONS(-D_UNICODE)
-add_executable(winapi_gdi WIN32 Source.cpp)		# Создает исполняемый файл с именем main
-									# из исходника main.cpp
+
+include_directories(.)
+
+list(APPEND sources
+		./winapi_gdi.cpp
+		./FACTORY.cpp
+		./CURVE.cpp
+		./PARABOLA.cpp)
+
+add_executable(winapi_gdi WIN32 ${sources})		# Создает исполняемый файл с именем <name>
+													# из исходника <name>.cpp
