--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,8 @@ list(APPEND sources
 		./winapi_gdi.cpp
 		./FACTORY.cpp
 		./CURVE.cpp
-		./PARABOLA.cpp)
+		./PARABOLA.cpp
+		./GYPERBOLA.cpp)
 
 add_executable(winapi_gdi WIN32 ${sources})		# Создает исполняемый файл с именем <name>
 													# из исходника <name>.cpp
