--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,8 @@ list(APPEND sources
 		./FACTORY.cpp
 		./CURVE.cpp
 		./PARABOLA.cpp
-		./GYPERBOLA.cpp)
+		./GYPERBOLA.cpp
+		./SINUS.cpp)
 
 add_executable(winapi_gdi WIN32 ${sources})		# Создает исполняемый файл с именем <name>
 													# из исходника <name>.cpp
